--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -29,7 +29,7 @@
                
                 {% else %}
             </ul>
-            <li><a href="{{url_for('auth.login')}}">SIGH-IN</a></li>
+            <li><a href="{{url_for('auth.login')}}">SIGN-IN</a></li>
 
             </ul>
             {%endif%}
