--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -47,9 +47,7 @@
 
 <style>
     body{
-        background-image:url(../static/far.jpg);
-        background-repeat:no-repeat ;
-        background-size: cover;
+        background-color: bisque;
     }
 </style>
 {%endblock%}
