Add educational pitch

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,7 +31,7 @@
                 <div class="well well-lg" style="text-align: center;">
                     <h3>Educational Pitches</h3>
                     <hr>
-                    <p>"Failure will never overtake me if my determination to succeed is strong enough." </p>
+                    <p>"Education is the passport to the future, for tomorrow belongs to those who prepare for it today." </p>
                     <a href="{{url_for('main.promotion_pitches')}}" class="btn btn-info -center">Click to view</a>
                 </div>
             </div>
