--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,7 +23,7 @@
                 <div class="well well-lg" style="text-align: center;">
                     <h3>Love Pitches</h3>
                     <hr>
-                    <p>"What differentiates sellers today is their ability to bring fresh ideas." </p>
+                    <p>"I am who I am because of you. You are every reason, every hope, and every dream I’ve ever had" </p>
                     <a href="{{url_for('main.product_pitches')}}" class="btn btn-info -center">Click to view</a>
                 </div>
 
