--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,8 +15,7 @@
                 <div class="well well-lg" style="text-align: center;">
                     <h3>Inspirational Pitches</h3>
                     <hr>
-                    <p>The greatest thing in this world is not so much where we stand, as in what direction we are
-                        moving </p>
+                    <p>“If you want to live a happy life, tie it to a goal, not to people or things.” </p>
                     <a href="{{url_for('main.interview_pitches')}}" class="btn btn-info btn-center -center">Click to
                         view</a>
                 </div>
