--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
 {%block content%}
 <div class=back>
     <div class=" text-center ">
-        <h1 class="head"><strong>Welcome to the Best Pitch</strong></h1>
+        <h1 class="head"><strong>Welcome to 1-Minute-Pitches</strong></h1>
     </div>
     <hr>
     <br><br>
